--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 #root {
-  max-width: 100%;
-  margin: 0 auto;
+  max-width: 100vw;
+  margin: 0 ;
   // padding: 2rem;
   text-align: center;
   height: 100vh;
