소셜로그인, 무한스크롤 구현

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,12 @@
   // padding: 2rem;
   text-align: center;
   height: 100vh;
+  width: 100vw;
+
+  --swiper-theme-color: white;
 }
+
+
 
 .logo {
   height: 6em;
