--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-bottom: 40px;
 }
+
+
+
 
 h1 {
   font-size: 3.2em;
